@@ -1,6 +1,6 @@
 Mono.Unix/StdioFileStreamTest.cs
-Mono.Unix/StdlibTest.cs
 Mono.Unix/UnixEncodingTest.cs
 Mono.Unix/UnixGroupTest.cs
 Mono.Unix/UnixMarshalTest.cs
 Mono.Unix/UnixUserTest.cs
+Mono.Unix.Native/StdlibTest.cs
